# PyTaiko

./: .gitignore  PyTaiko.py  README.md  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_audio.yml  main.yml  portaudio-mac.yml  python-app.yml
Graphics/background/: animation.json
Graphics/background/renda/: texture.json
Graphics/entry/: animation.json
Graphics/game/: animation.json
Graphics/game/branch/: texture.json
Graphics/global/: animation.json
Graphics/result/: animation.json
Graphics/song_select/: animation.json
Graphics/title/: animation.json
Graphics/transition/: animation.json
Sounds/hit_sounds/: neiro_list.txt
libs/: animation.py  audio.py  background.py  backgrounds.py  file_navigator.py  global_data.py  global_objects.py  song_hash.py  texture.py  tja.py  utils.py  video.py
libs/audio/: Makefile  audio.c  audio.def  audio.h  build.sh  check_deps.py  libaudio.lib  test_wrapper.py
libs/bg_collabs/: __init__.py  a3.py  buttoburst.py
libs/bg_objects/: bg_fever.py  bg_normal.py  chibi.py  dancer.py  don_bg.py  fever.py  footer.py  renda.py
model/: mikudon.mtl
scenes/: devtest.py  entry.py  game.py  loading.py  result.py  settings.py  song_select.py  title.py
scenes/two_player/: game.py  result.py  song_select.py
shader/: outline.fs
