[project]
name = "pytaiko"
version = "0.1.0"
description = "Taiko no Tatsujin simulator written in python and raylib"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "sounddevice>=0.5.1",
    "moviepy>=2.1.2",
    "raylib-sdl>=5.5.0.2",
    "soundfile>=0.13.1",
    "tomlkit>=0.13.3",
    "dotenv>=0.9.9",
    "gitpython>=3.1.44",
]

[dependency-groups]
dev = []

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
disable-telemetry = true
formatter-cmds = ["disabled"]
